ROOTMAP.Core/simulation/data_access/input_scheme_parser/InputSchemeParser.output
Grammar

    0 $accept: statements $end

    1 statements: /* empty */
    2           | statements statement

    3 statement: scoreboarddecl
    4          | planedecl
    5          | rowcoldecl
    6          | boxdecl
    7          | boxesdecl

    8 scoreboarddecl: SETTOK SCOREBOARDTOK value_assignment SEMICOLON

    9 planedecl: SETTOK PLANETOK dimension_assignment value_assignment SEMICOLON

   10 rowcoldecl: SETTOK ROWCOLTOK dimension_assignment dimension_assignment value_assignment SEMICOLON

   11 boxdecl: SETTOK BOXTOK box_assignment value_assignment SEMICOLON

   12 boxesdecl: SETTOK BOXESTOK box_assignment box_assignment value_assignment SEMICOLON

   13 box_assignment: OPENARRAY index_assignment COMMA index_assignment COMMA index_assignment CLOSEARRAY

   14 index_assignment: LONGVAL
   15                 | ENDTOK

   16 value_assignment: VALUETOK EQUALS DOUBLEVAL

   17 dimension_assignment: DIMSPECVAL EQUALS LONGVAL


Terminals, with rules where they appear

$end (0) 0
error (256)
SETTOK (258) 8 9 10 11 12
ROWCOLTOK (259) 10
VALUETOK (260) 16
SCOREBOARDTOK (261) 8
PLANETOK (262) 9
BOXTOK (263) 11
BOXESTOK (264) 12
EQUALS (265) 16 17
SEMICOLON (266) 8 9 10 11 12
COMMA (267) 13
OPENARRAY (268) 13
CLOSEARRAY (269) 13
LONGVAL (270) 14 17
DOUBLEVAL (271) 16
DIMSPECVAL (272) 17
ENDTOK (273) 15


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
statements (20)
    on left: 1 2, on right: 0 2
statement (21)
    on left: 3 4 5 6 7, on right: 2
scoreboarddecl (22)
    on left: 8, on right: 3
planedecl (23)
    on left: 9, on right: 4
rowcoldecl (24)
    on left: 10, on right: 5
boxdecl (25)
    on left: 11, on right: 6
boxesdecl (26)
    on left: 12, on right: 7
box_assignment (27)
    on left: 13, on right: 11 12
index_assignment (28)
    on left: 14 15, on right: 13
value_assignment (29)
    on left: 16, on right: 8 9 10 11 12
dimension_assignment (30)
    on left: 17, on right: 9 10


state 0

    0 $accept: . statements $end

    $default  reduce using rule 1 (statements)

    statements  go to state 1


state 1

    0 $accept: statements . $end
    2 statements: statements . statement

    $end    shift, and go to state 2
    SETTOK  shift, and go to state 3

    statement       go to state 4
    scoreboarddecl  go to state 5
    planedecl       go to state 6
    rowcoldecl      go to state 7
    boxdecl         go to state 8
    boxesdecl       go to state 9


state 2

    0 $accept: statements $end .

    $default  accept


state 3

    8 scoreboarddecl: SETTOK . SCOREBOARDTOK value_assignment SEMICOLON
    9 planedecl: SETTOK . PLANETOK dimension_assignment value_assignment SEMICOLON
   10 rowcoldecl: SETTOK . ROWCOLTOK dimension_assignment dimension_assignment value_assignment SEMICOLON
   11 boxdecl: SETTOK . BOXTOK box_assignment value_assignment SEMICOLON
   12 boxesdecl: SETTOK . BOXESTOK box_assignment box_assignment value_assignment SEMICOLON

    ROWCOLTOK      shift, and go to state 10
    SCOREBOARDTOK  shift, and go to state 11
    PLANETOK       shift, and go to state 12
    BOXTOK         shift, and go to state 13
    BOXESTOK       shift, and go to state 14


state 4

    2 statements: statements statement .

    $default  reduce using rule 2 (statements)


state 5

    3 statement: scoreboarddecl .

    $default  reduce using rule 3 (statement)


state 6

    4 statement: planedecl .

    $default  reduce using rule 4 (statement)


state 7

    5 statement: rowcoldecl .

    $default  reduce using rule 5 (statement)


state 8

    6 statement: boxdecl .

    $default  reduce using rule 6 (statement)


state 9

    7 statement: boxesdecl .

    $default  reduce using rule 7 (statement)


state 10

   10 rowcoldecl: SETTOK ROWCOLTOK . dimension_assignment dimension_assignment value_assignment SEMICOLON

    DIMSPECVAL  shift, and go to state 15

    dimension_assignment  go to state 16


state 11

    8 scoreboarddecl: SETTOK SCOREBOARDTOK . value_assignment SEMICOLON

    VALUETOK  shift, and go to state 17

    value_assignment  go to state 18


state 12

    9 planedecl: SETTOK PLANETOK . dimension_assignment value_assignment SEMICOLON

    DIMSPECVAL  shift, and go to state 15

    dimension_assignment  go to state 19


state 13

   11 boxdecl: SETTOK BOXTOK . box_assignment value_assignment SEMICOLON

    OPENARRAY  shift, and go to state 20

    box_assignment  go to state 21


state 14

   12 boxesdecl: SETTOK BOXESTOK . box_assignment box_assignment value_assignment SEMICOLON

    OPENARRAY  shift, and go to state 20

    box_assignment  go to state 22


state 15

   17 dimension_assignment: DIMSPECVAL . EQUALS LONGVAL

    EQUALS  shift, and go to state 23


state 16

   10 rowcoldecl: SETTOK ROWCOLTOK dimension_assignment . dimension_assignment value_assignment SEMICOLON

    DIMSPECVAL  shift, and go to state 15

    dimension_assignment  go to state 24


state 17

   16 value_assignment: VALUETOK . EQUALS DOUBLEVAL

    EQUALS  shift, and go to state 25


state 18

    8 scoreboarddecl: SETTOK SCOREBOARDTOK value_assignment . SEMICOLON

    SEMICOLON  shift, and go to state 26


state 19

    9 planedecl: SETTOK PLANETOK dimension_assignment . value_assignment SEMICOLON

    VALUETOK  shift, and go to state 17

    value_assignment  go to state 27


state 20

   13 box_assignment: OPENARRAY . index_assignment COMMA index_assignment COMMA index_assignment CLOSEARRAY

    LONGVAL  shift, and go to state 28
    ENDTOK   shift, and go to state 29

    index_assignment  go to state 30


state 21

   11 boxdecl: SETTOK BOXTOK box_assignment . value_assignment SEMICOLON

    VALUETOK  shift, and go to state 17

    value_assignment  go to state 31


state 22

   12 boxesdecl: SETTOK BOXESTOK box_assignment . box_assignment value_assignment SEMICOLON

    OPENARRAY  shift, and go to state 20

    box_assignment  go to state 32


state 23

   17 dimension_assignment: DIMSPECVAL EQUALS . LONGVAL

    LONGVAL  shift, and go to state 33


state 24

   10 rowcoldecl: SETTOK ROWCOLTOK dimension_assignment dimension_assignment . value_assignment SEMICOLON

    VALUETOK  shift, and go to state 17

    value_assignment  go to state 34


state 25

   16 value_assignment: VALUETOK EQUALS . DOUBLEVAL

    DOUBLEVAL  shift, and go to state 35


state 26

    8 scoreboarddecl: SETTOK SCOREBOARDTOK value_assignment SEMICOLON .

    $default  reduce using rule 8 (scoreboarddecl)


state 27

    9 planedecl: SETTOK PLANETOK dimension_assignment value_assignment . SEMICOLON

    SEMICOLON  shift, and go to state 36


state 28

   14 index_assignment: LONGVAL .

    $default  reduce using rule 14 (index_assignment)


state 29

   15 index_assignment: ENDTOK .

    $default  reduce using rule 15 (index_assignment)


state 30

   13 box_assignment: OPENARRAY index_assignment . COMMA index_assignment COMMA index_assignment CLOSEARRAY

    COMMA  shift, and go to state 37


state 31

   11 boxdecl: SETTOK BOXTOK box_assignment value_assignment . SEMICOLON

    SEMICOLON  shift, and go to state 38


state 32

   12 boxesdecl: SETTOK BOXESTOK box_assignment box_assignment . value_assignment SEMICOLON

    VALUETOK  shift, and go to state 17

    value_assignment  go to state 39


state 33

   17 dimension_assignment: DIMSPECVAL EQUALS LONGVAL .

    $default  reduce using rule 17 (dimension_assignment)


state 34

   10 rowcoldecl: SETTOK ROWCOLTOK dimension_assignment dimension_assignment value_assignment . SEMICOLON

    SEMICOLON  shift, and go to state 40


state 35

   16 value_assignment: VALUETOK EQUALS DOUBLEVAL .

    $default  reduce using rule 16 (value_assignment)


state 36

    9 planedecl: SETTOK PLANETOK dimension_assignment value_assignment SEMICOLON .

    $default  reduce using rule 9 (planedecl)


state 37

   13 box_assignment: OPENARRAY index_assignment COMMA . index_assignment COMMA index_assignment CLOSEARRAY

    LONGVAL  shift, and go to state 28
    ENDTOK   shift, and go to state 29

    index_assignment  go to state 41


state 38

   11 boxdecl: SETTOK BOXTOK box_assignment value_assignment SEMICOLON .

    $default  reduce using rule 11 (boxdecl)


state 39

   12 boxesdecl: SETTOK BOXESTOK box_assignment box_assignment value_assignment . SEMICOLON

    SEMICOLON  shift, and go to state 42


state 40

   10 rowcoldecl: SETTOK ROWCOLTOK dimension_assignment dimension_assignment value_assignment SEMICOLON .

    $default  reduce using rule 10 (rowcoldecl)


state 41

   13 box_assignment: OPENARRAY index_assignment COMMA index_assignment . COMMA index_assignment CLOSEARRAY

    COMMA  shift, and go to state 43


state 42

   12 boxesdecl: SETTOK BOXESTOK box_assignment box_assignment value_assignment SEMICOLON .

    $default  reduce using rule 12 (boxesdecl)


state 43

   13 box_assignment: OPENARRAY index_assignment COMMA index_assignment COMMA . index_assignment CLOSEARRAY

    LONGVAL  shift, and go to state 28
    ENDTOK   shift, and go to state 29

    index_assignment  go to state 44


state 44

   13 box_assignment: OPENARRAY index_assignment COMMA index_assignment COMMA index_assignment . CLOSEARRAY

    CLOSEARRAY  shift, and go to state 45


state 45

   13 box_assignment: OPENARRAY index_assignment COMMA index_assignment COMMA index_assignment CLOSEARRAY .

    $default  reduce using rule 13 (box_assignment)
